2018-11-01  Stuart Caie <kyzer@cabextract.org.uk>

	* cabd_extract(): would not do decompression for random-access
	offsets if the folder type was LZX. This is a fairly major bug,
	and affects any decompression where you skip directly to a file,
	or decompress data out-of-order. Thanks to austin987 for alerting
	me to this.

	This bug was introduced by the recent 'salvage mode' patch. Even
	though I'd reviewed all the differences in clamav's copy of
	libmspack and said "wtf" to this particular change, I didn't
	notice it was still in the resulting patch I merged. Mea culpa :)

	* test/cabd_test.c: now has a regression test to cover this

2018-10-31  Stuart Caie <kyzer@cabextract.org.uk>

	* Makefile.am, test/*_test.c: use the automake test-suite system
	with the test-suite programs (cabd_test, chmd_test, kwajd_test).
	This also fixes a longstanding bugbear that these programs don't
	access their test files using an absolute path. Now this is passed
	to them and you can run them from any directory. Thanks to Richard
	Jones for requesting this.

2018-10-31  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: require at least automake 1.11, use AM_SILENT_RULES
	unconditionally

2018-10-30  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: remove obsolescent C library tests. AC_HEADER_STDC is
	removed, and so are most checks for standard C headers. libmspack now
	makes these assumptions:
	- <ctype.h> <limits.h> <stdlib.h> <string.h> exist
	- <ctype.h> defines tolower()
	- <string.h> defines memset(), memcmp(), strlen()
	- if towlower() exists, it's defined in <wctype.h>

2018-10-22  Stuart Caie <kyzer@cabextract.org.uk>

	* cabd.c: remove the only use of assert()

2018-10-20  Stuart Caie <kyzer@cabextract.org.uk>

	* src/chmextract.c: add anti "../" and leading slash protection to
	chmextract. I'm not pleased about this. All the sample code provided
	with libmspack is meant to be simple examples of library use, not