@@ -84,21 +84,18 @@ examples/multifh.c     - an mspack_system that can simultaneously work on
                          in-memory images, raw file descriptors, open file
                          handles and regular disk files
 
-src/cabrip.c           - extracts any CAB files embedded in another file
-src/chmextract.c       - extracts all files in a CHM file to disk
-src/msexpand.c         - expands an SZDD or KWAJ file
-src/oabextract.c       - extracts an Exchange Offline Address Book (.LZX) file
+examples/cabrip.c       - extracts any CAB files embedded in another file
+examples/chmextract.c   - extracts all files in a CHM file to disk
+examples/msexpand.c     - expands an SZDD or KWAJ file
+examples/oabextract.c   - extracts an Exchange Offline Address Book (.LZX) file
 
 test/cabd_c10          - tests the CAB decompressor on the C10 collection
 test/cabd_compare      - compares libmspack with Microsoft's EXTRACT.EXE
 test/cabd_md5          - shows MD5 checksums of all files in a CAB file/set
-test/cabd_test.c       - regression tests for libmspack's CAB decompression
 test/chmd_compare      - compares libmspack with Microsoft's HH.EXE
-test/chmd_find.c       - fast-finds a file within a CHM file.
+test/chmd_find.c       - checks all files in a CHM file can be fast-found
 test/chmd_md5.c        - shows MD5 checksums of all files within a CHM file
 test/chmd_order.c      - extracts files in a CHM file in four different ways
-test/chmd_test.c       - regression tests for libmspack's CHM decompression
-test/kwajd_test.c      - regression tests for libmspack's KWAJ decompression
 test/chminfo.c         - prints verbose information about CHM file structures
 test/msdecompile_md5   - runs Microsoft's HH.EXE -DECOMPILE via WINE
 test/msextract_md5     - runs Microsoft's EXTRACT.EXE via WINE
