@@ -3,4 +3,8 @@
 .dirstamp
 .libs
 cabd_memory
+cabrip
+chmextract
+msexpand
 multifh
+oabextract
