@@ -1,8 +1,0 @@
-*.o
-.deps
-.dirstamp
-.libs
-cabrip
-chmextract
-msexpand
-oabextract
